--- a/feature/src/main/res/layout/row_spot_item_layout.xml
+++ b/feature/src/main/res/layout/row_spot_item_layout.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="end"
-            app:constraint_referenced_ids="lblName, lblAddress, lblDistance,lblPhone, lblConnectorsNumber" />
+            app:constraint_referenced_ids="lblName, lblAddress, lblDistance, lblConnectorsNumber" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblName"
@@ -75,29 +75,6 @@
             tools:text="charger name" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/lblPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:text="Phone: "
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toEndOf="@id/ivIcon"
-            app:layout_constraintTop_toBottomOf="@id/lblAddress" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvPhone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:gravity="end"
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toTopOf="@id/lblPhone"
-            tools:text="0101010110" />
-
-        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -105,7 +82,7 @@
             android:text="Distance: "
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toEndOf="@id/ivIcon"
-            app:layout_constraintTop_toBottomOf="@id/lblPhone" />
+            app:layout_constraintTop_toBottomOf="@id/lblAddress" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvDistance"
