--- a/feature/src/main/res/layout/fragment_details.xml
+++ b/feature/src/main/res/layout/fragment_details.xml
@@ -25,7 +25,7 @@
             android:tint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toBottomOf="@id/lblFixed" />
+            app:layout_constraintTop_toBottomOf="@id/lblMaxPower" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivIcon"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="end"
-            app:constraint_referenced_ids="lblAddress, lblDistance,lblPhone, lblConnectorsNumber,lblCapacity, lblMaxPower,lblFixed,lblConnectorsType" />
+            app:constraint_referenced_ids="lblAddress, lblConnectorsNumber, lblDistance,lblMaxPower" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvName"
@@ -84,29 +84,6 @@
             tools:text="charger name" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/lblPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:text="Phone: "
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblAddress" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvPhone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:gravity="end"
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toTopOf="@id/lblPhone"
-            tools:text="01087457344" />
-
-        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -114,7 +91,7 @@
             android:text="Distance: "
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblPhone" />
+            app:layout_constraintTop_toBottomOf="@id/tvAddress" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvDistance"
@@ -127,7 +104,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/brLabels"
             app:layout_constraintTop_toTopOf="@id/lblDistance"
-            tools:text="12 KM" />
+            tools:text="charger name" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblConnectorsNumber"
@@ -137,7 +114,7 @@
             android:text="Connectors No.: "
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblDistance" />
+            app:layout_constraintTop_toBottomOf="@id/tvDistance" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvConnectorsNumber"
@@ -153,52 +130,6 @@
             tools:text="3" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/lblConnectorsType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:text="Connectors Type: "
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblConnectorsNumber" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvConnectorsType"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:gravity="end"
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toTopOf="@id/lblConnectorsType"
-            tools:text="type" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/lblCapacity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:text="Capacity: "
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblConnectorsType" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvCapacity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:gravity="end"
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toTopOf="@id/lblCapacity"
-            tools:text="40 A" />
-
-        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblMaxPower"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -206,7 +137,7 @@
             android:text="Max Power: "
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblCapacity" />
+            app:layout_constraintTop_toBottomOf="@id/tvConnectorsNumber" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvMaxPower"
@@ -221,28 +152,6 @@
             app:layout_constraintTop_toTopOf="@id/lblMaxPower"
             tools:text="100" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/lblFixed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:text="Fixed Cable: "
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblMaxPower" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvFixed"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:gravity="end"
-            android:textColor="@android:color/holo_green_dark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/brLabels"
-            app:layout_constraintTop_toTopOf="@id/lblFixed"
-            tools:text="true" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/lblLocate"
